@@ -3,3 +3,4 @@ Changes for Neutron migration
 * The context passed to an API should have an ovsdb_connection attribute
 * The helpers.enable_connection_uri function now takes a timeout and an
   execute function as arguments, any kwargs will be passed to that function
+* Neutron will need to subclass OvsdbIdl and call vlog.use_python_logger() itself.
